# Ghost_Writer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LocalWhisperSTT_exp.ts  README.md  SECURITY.md  SettingsOverlay_exp.tsx  WhisperModelManager_exp.ts  eslint.config.mjs  files_in_exp.txt  index.html  install.ps1  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.mts
.github/: PULL_REQUEST_TEMPLATE.md
assets/: entitlements.mac.plist
config/: launch-config.json
docs/: ARCHITECTURE.md  PRIVACY.md  TROUBLESHOOTING.md  index.html  onboarding.html  styles.css  troubleshooting_audio.md
electron/: IntelligenceManager.ts  LLMHelper.ts  ProcessingHelper.ts  ScreenshotHelper.ts  SettingsWindowHelper.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts  shortcuts.ts
electron/native/: Cargo.toml  errors.txt  index.js  index.win32-x64-msvc.node  package-lock.json  package.json
electron/native/src/: lib.rs  microphone.rs
electron/native/src/speaker/: core_audio.rs  mod.rs  windows.rs
scratch/: fix_launcher.js  inspect_supabase.js  sanitize_supabase.js  update_db.js  update_intelligence.js
scripts/: app_dev.js  collect_release_artifacts.js  package_release.js  run_electron_dev.js
src/: App.tsx  index.css
tests/: benchmark_audio.js  generate_icon.js  ipc_recent_transcript_context.test.js  llm_screenshot_ocr_routing.test.js  llm_session_context.test.js  meeting_screenshot_persistence.test.js  meeting_summary_routing.test.js  ollama_fast_local_models.test.js  prompt_settings.test.js  (+19 more)
(+133 files in other folders)
